[applets/systemtray] Don't manually destroy innerContainment

It's already destroyed by the corona

BUG: 420245
(cherry picked from commit 7baa4c221e45f161adf4e00d4cf0e36d6436e90c)