applets/systemtray/container/systemtraycontainer.cpp
@@ -20,9 +20,6 @@ SystemTrayContainer::SystemTrayContainer(QObject *parent, const KPluginMetaData 
 
 SystemTrayContainer::~SystemTrayContainer()
 {
-    if (destroyed()) {
-        m_innerContainment->destroy();
-    }
 }
 
 void SystemTrayContainer::init()
